ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = \
	_config.yml _data/home.yml \
	assets/favicon-32.png assets/favicon-152.png assets/favicon-192.png \
	assets/jigsaw-220x124.png \
	assets/favimage-480x270.jpg assets/favimage-840x472.jpg assets/favimage-944x472.jpg \
	APPROACH.txt CHANGELOG.md DESCRIPTION.txt LICENSE.txt README.md index.md \
	german.list jigsaw.list plato.list worldnet.list

bin_PROGRAMS = jigsaw

jigsaw_SOURCES = jigsaw.c
